# Cinux

./: .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md
.claude/commands/: audit.md  done.md  milestone.md  next.md  resume.md  roadmap.md  status.md
.githooks/: pre-commit
.github/workflows/: build-images.yml  ci.yml  release.yml
assets/README/: RECORDING.md
cmake/: options.cmake  qemu.cmake  toolchain-x86_64.cmake
document/ai/: A-rewrite-handoff.md  CODING-TASTE.md  DEVLOG.md  DIRECTIVES.md  PLAN.md  QUALITY-GATES.md  ROADMAP.md  prompts.md
document/ai_prompts/: code_conventions.md  prompt_understand_project.md
document/changelogs/: v1.0.0.md
document/ci/: 04-tag-and-release.md  06-local-act.md
document/design/: cinuxbase-design.md
document/notes/: 2026-05-26-double-fault-stack-overflow.md  2026-06-15-f1-m0-erroror-migration.md  2026-06-16-f1-m1-ringbuffer-migration.md  2026-06-16-f1-m2-kernel-logging.md  2026-06-16-f1-m3-dma-buffer.md  2026-06-16-f1-m3-dma-pool.md  2026-06-16-f1-m3-dma-summary.md  2026-06-16-f1-m3-prdt-builder.md  2026-06-16-f1-m4-block-device.md  2026-06-16-f5-m1-ahci-dma.md  2026-06-17-f2-m1-vma.md  2026-06-17-f2-m5-demand-paging.md  2026-06-17-f2-m6-ext2-cache.md  2026-06-17-f2-m7-direct-map-buddy-handoff.md  2026-06-18-f3-m1-signals.md  2026-06-18-fo-observability.md  2026-06-19-f3-m3-1-process-group.md  2026-06-19-f3-m3-2-pgrp-killpg.md  2026-06-19-f3-m3-3-pgrp-syscalls.md  2026-06-19-f3-m3-summary.md  2026-06-19-f3-m4-1.md  2026-06-19-f3-m4-2.md  2026-06-19-f3-m4-3.md  2026-06-19-f3-m4-4.md  2026-06-19-f3-m4-summary.md  2026-06-19-f4-m1-1-rsdp.md  2026-06-19-f4-m1-4-init.md  2026-06-19-f4-m2-1-local-apic.md  2026-06-19-f4-m2-2-io-apic.md  2026-06-19-f4-m2-3-switch.md  2026-06-19-f4-m2-4-closeout.md  2026-06-19-f4-m3-design.md  2026-06-19-f4-m3-p1-2-swapgs-discipline.md  2026-06-19-f4-m3-p2-1-ipi.md  2026-06-19-finfra-1-ci-hang-artifact.md  2026-06-19-finfra-10-lockdep.md  2026-06-19-finfra-2-freestanding-headers.md  2026-06-19-finfra-3-warning-flags.md  2026-06-19-finfra-3b-kprintf-format.md  2026-06-19-finfra-4-static-assert-layouts.md  (+170 more)
document/todo/: README.md
kernel/: CMakeLists.txt  errno.hpp  linker.ld  main.cpp  version.hpp
kernel/arch/: CMakeLists.txt
kernel/drivers/: CMakeLists.txt  block_device.hpp  block_registry.cpp  block_registry.hpp  canvas.hpp  mmio.hpp  mouse.cpp  ram_block_device.hpp
kernel/fs/: CMakeLists.txt  dentry.cpp  dentry.hpp  devfs.cpp  devfs.hpp  devfs_init.cpp  ext2.hpp  ext2_common.cpp  ext2_common.hpp  ext2_directory.cpp  ext2_init.cpp  ext2_inode.cpp  file.cpp  file.hpp  file_lock.cpp  file_lock.hpp  inode.cpp  inode.hpp  inode_ref.hpp  procfs.cpp  procfs.hpp  procfs_content.cpp  procfs_content.hpp  ramdisk.cpp  ramdisk.hpp  vfs_filesystem.hpp  vfs_lookup.cpp  vfs_lookup.hpp  vfs_mount.cpp  vfs_mount.hpp
kernel/gui/: CMakeLists.txt  cgui_host_cinux.cpp  cgui_host_cinux.hpp  desktop_launch.cpp  gui_init.cpp  gui_init.hpp  host_cinux.cpp  host_cinux.hpp  terminal.cpp  terminal.hpp  terminal_ansi.cpp  visor_host_cinux.cpp  visor_host_cinux.hpp  window.hpp  window_manager.cpp  window_manager.hpp  window_manager_input.cpp
kernel/ipc/: CMakeLists.txt  fifo.cpp  fifo.hpp  pipe.cpp  pipe.hpp  pipe_ops.cpp  pipe_ops.hpp  shm.cpp  shm.hpp
kernel/lib/: CMakeLists.txt  aslr.hpp  concurrent_ring_buffer.hpp  echo_trace.hpp  format.hpp  kallsyms.cpp  kallsyms.hpp  klog.cpp  klog.hpp  kprintf.cpp  kprintf.hpp  not_null.hpp  random.cpp  random.hpp  ubsan.cpp  user_ptr.hpp
kernel/mini/: CMakeLists.txt  big_kernel_loader.cpp  elf_loader.cpp  main.cpp
kernel/mm/: CMakeLists.txt  address_space.cpp  address_space.hpp  buddy.cpp  buddy.hpp  diagnostics.cpp  diagnostics.hpp  heap.cpp  page_cache.cpp  page_cache.hpp  phys_ref.hpp  pmm.cpp  pmm.hpp  slab.cpp  slab.hpp  stats_kthread.cpp  stats_kthread_stub.cpp  vma.cpp  vma.hpp  vmm.cpp
kernel/net/: CMakeLists.txt  arp.cpp  arp.hpp  byte_order.hpp  icmp.cpp  icmp.hpp  loopback_device.hpp  net_device.hpp  net_stack.hpp  raw_socket.cpp  raw_socket.hpp  socket.cpp  socket.hpp  tcp.cpp  tcp.hpp  tcp_socket.cpp  tcp_socket.hpp  udp_socket.cpp  udp_socket.hpp  unix_socket.cpp  unix_socket.hpp  wait_queue.hpp
kernel/proc/: CMakeLists.txt  clone.cpp  elf_load.cpp  elf_types.cpp  elf_types.hpp  execve.cpp  fork.cpp  init.cpp  initial_stack.hpp  lockdep.cpp  lockdep.hpp  percpu.cpp  percpu.hpp  process.hpp  process_group.cpp  process_group.hpp  process_internal.hpp  process_new.cpp  race_detect.cpp  race_detect.hpp  race_detect_stub.cpp  roundrobin.cpp  scheduler.cpp  scheduler.hpp  scheduler_block.cpp  shared_cwd.hpp  shell_launch.cpp  signal.cpp  signal.hpp  signal_frame.cpp  sync.cpp  sync.hpp  task_builder.cpp  task_builder.hpp  task_snapshot.hpp  timer_queue.cpp  user_launch.cpp  user_launch.hpp  userspace.hpp
kernel/syscall/: CMakeLists.txt  path_util.cpp  path_util.hpp  poll_core.cpp  sys_accept4.cpp  sys_accept4.hpp  sys_access.cpp  sys_access.hpp  sys_arch_prctl.cpp  sys_arch_prctl.hpp  sys_brk.cpp  sys_brk.hpp  sys_chdir.cpp  sys_chdir.hpp  sys_chmod.cpp  sys_cinux_exit.cpp  sys_cinux_exit.hpp  sys_clock_gettime.cpp  sys_clock_gettime.hpp  sys_close.cpp  sys_creat.cpp  sys_creat.hpp  sys_creds.cpp  sys_creds.hpp  sys_dmesg.cpp  sys_execve.cpp  sys_execve.hpp  sys_exit.cpp  sys_exit.hpp  sys_flock.cpp  sys_flock.hpp  sys_futex.cpp  sys_futex.hpp  sys_getdents.cpp  sys_getdents64.cpp  sys_getdents64.hpp  (+73 more)
scripts/: act_ci_job.sh  assemble_gcc_rootfs.sh  build-buildroot.sh  check_freestanding_headers.py  check_memory_layout.py  check_test_count.sh  check_uaccess_boundaries.sh  create_ext2_disk.sh  create_ext4_disk.sh  decode-trace.sh  qemu_test_wrapper.sh  run-release.sh  update_rootfs_host.sh
test/: CMakeLists.txt
user/: CMakeLists.txt
visor/: CMakeLists.txt
visor/core/: visor_abi_check.cpp  visor_conf.h  visor_event.h  visor_event_payload.h  visor_host.h  visor_pump.cpp  visor_pump.hpp  visor_region.cpp  visor_region.hpp  visor_swraseter.cpp  visor_swraseter.hpp
visor/host/: fake_host_main.cpp
(+358 files in other folders)
